[tool.poetry]
name = "stack-overflow"
version = "0.1.0"
description = ""
authors = ["Benjamin <christianbfc97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.2.1"
polars = "^1.4.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
plotly = "^5.23.0"
squarify = "^0.4.4"
pandoc = "^2.4"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
